<resources>
    <string name="app_name">Pet Collection</string>
    <string name="obrigado">Thank you</string>
    <string name="nosso_aplicativo_gratuito_gra_as_a_voc_ncolete_os_bichinhos_e_monte_a_sua_cole_o">Our app is free thanks to you!\nCollect the pets and build your collection.</string>
    <string name="voltar">Back</string>
    <string name="voc_incr_vel">You are amazing!</string>
    <string name="pr_ximo_animal">Next animal</string>
    <string name="sua_cole_o">Your collection</string>
    <string name="total">Total:</string>
    <string name="nosso_aplicativo_gratuito_gra_as_a_voc_nsua_colecao_esta_completa">Our app is free thanks to you!\nCongratulations, your collection is complete!</string>
</resources>
